HCMPRE-493 code review comments